--- a/public/book.html
+++ b/public/book.html
@@ -67,6 +67,19 @@
             <button id="book-teacher-login-btn" class="w-full py-2 rounded-md btn btn-primary">교사 로그인</button>
             <button id="book-teacher-google-login-btn" class="w-full py-2 mt-2 rounded-md btn btn-secondary"><i class="fab fa-google mr-2"></i>Google로 로그인</button>
         </div>
+        <div class="mt-6 text-center">
+            <button id="book-show-student-register-btn" class="w-full text-center text-sm text-amber-600 hover:underline">처음이신가요? 학생 등록하기</button>
+        </div>
+    </div>
+
+    <div id="book-student-register-view" class="max-w-md mx-auto mb-8 bg-white p-6 rounded-lg shadow-lg hidden">
+        <h2 class="text-2xl font-bold mb-6 text-center">🧑‍🎓 학생 등록</h2>
+        <div class="mb-4">
+            <label for="book-student-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
+            <input type="text" id="book-student-name" class="w-full p-2 border border-gray-300 rounded-md form-input" placeholder="이름을 입력하세요">
+        </div>
+        <button id="book-student-register-btn" class="w-full py-2 rounded-md btn btn-primary mb-4">등록하고 코드 받기</button>
+        <button id="book-back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
     </div>
 
     <div id="book-content" class="hidden">
@@ -127,8 +140,8 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, increment, collection, addDoc, getDocs, query, where } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, increment, collection, addDoc, getDocs, query, where, runTransaction } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref as storageRef, uploadString, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
 
         // 전역 변수
@@ -871,6 +884,8 @@
         const teacherLoginTab = document.getElementById('book-teacher-login-tab');
         const studentLoginContent = document.getElementById('book-student-login-content');
         const teacherLoginContent = document.getElementById('book-teacher-login-content');
+        const bookLoginView = document.getElementById('book-login-view');
+        const bookStudentRegisterView = document.getElementById('book-student-register-view');
 
         function switchLoginTab(tab) {
             if (tab === 'student') {
@@ -889,6 +904,15 @@
         studentLoginTab.addEventListener('click', () => switchLoginTab('student'));
         teacherLoginTab.addEventListener('click', () => switchLoginTab('teacher'));
         switchLoginTab('student');
+
+        document.getElementById('book-show-student-register-btn').addEventListener('click', () => {
+            bookLoginView.classList.add('hidden');
+            bookStudentRegisterView.classList.remove('hidden');
+        });
+        document.getElementById('book-back-to-login-btn').addEventListener('click', () => {
+            bookStudentRegisterView.classList.add('hidden');
+            bookLoginView.classList.remove('hidden');
+        });
 
         const addBookBtn = document.getElementById('add-book-btn');
         const addBookModal = document.getElementById('add-book-modal');
@@ -967,13 +991,63 @@
             try { await signInWithPopup(auth, provider); } catch (_) { alert('로그인 실패'); }
         });
 
+        document.getElementById('book-student-register-btn').addEventListener('click', async () => {
+            const name = document.getElementById('book-student-name').value.trim();
+            if (!name) { alert('이름을 입력해주세요.'); return; }
+            try {
+                const counterRef = doc(db, 'metadata', 'counters');
+                const newCode = await runTransaction(db, async (transaction) => {
+                    const counterDoc = await transaction.get(counterRef);
+                    let nextCode = 1;
+                    if (counterDoc.exists() && counterDoc.data().lastUserCode) {
+                        nextCode = counterDoc.data().lastUserCode + 1;
+                    }
+                    transaction.set(counterRef, { lastUserCode: nextCode }, { merge: true });
+                    return nextCode;
+                });
+
+                const email = `${newCode}@abc.com`;
+                const password = `${newCode}qwerty`;
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+
+                await setDoc(doc(db, 'users', userCredential.user.uid), {
+                    uid: userCredential.user.uid,
+                    name,
+                    email,
+                    userCode: newCode,
+                    role: 'student',
+                    coins: 0,
+                    balance: 0,
+                    portfolio: {},
+                    createdAt: serverTimestamp()
+                });
+
+                await addDoc(collection(db, 'signupLog'), {
+                    name,
+                    userCode: newCode,
+                    role: 'student',
+                    signedUpAt: serverTimestamp()
+                });
+
+                alert(`환영합니다, ${name} 학생!\n당신의 고유 코드는 ${newCode} 입니다.\n이 코드를 꼭 기억하고 로그인해주세요.`);
+                document.getElementById('book-student-name').value = '';
+                bookStudentRegisterView.classList.add('hidden');
+                bookLoginView.classList.remove('hidden');
+            } catch (e) {
+                console.error('Error adding document:', e);
+                alert('학생 등록 중 문제가 발생했습니다.');
+            }
+        });
+
         onAuthStateChanged(auth, async (user) => {
             const loginView = document.getElementById('book-login-view');
+            const registerView = document.getElementById('book-student-register-view');
             const contentView = document.getElementById('book-content');
             const viewerPage = document.getElementById('book-viewer-page');
             const listSection = document.getElementById('book-list-section');
             if (user) {
                 loginView.classList.add('hidden');
+                registerView.classList.add('hidden');
                 contentView.classList.remove('hidden');
                 viewerPage.classList.add('hidden');
                 listSection.classList.remove('hidden');
@@ -982,6 +1056,7 @@
                 await loadUserBooks();
             } else {
                 loginView.classList.remove('hidden');
+                registerView.classList.add('hidden');
                 contentView.classList.add('hidden');
             }
         });
