--- a/public/book.html
+++ b/public/book.html
@@ -67,6 +67,19 @@
             <button id="book-teacher-login-btn" class="w-full py-2 rounded-md btn btn-primary">교사 로그인</button>
             <button id="book-teacher-google-login-btn" class="w-full py-2 mt-2 rounded-md btn btn-secondary"><i class="fab fa-google mr-2"></i>Google로 로그인</button>
         </div>
+        <div class="mt-6 text-center">
+            <button id="book-show-student-register-btn" class="w-full text-center text-sm text-amber-600 hover:underline">처음이신가요? 학생 등록하기</button>
+        </div>
+    </div>
+
+    <div id="book-student-register-view" class="max-w-md mx-auto mb-8 bg-white p-6 rounded-lg shadow-lg hidden">
+        <h2 class="text-2xl font-bold mb-6 text-center">🧑‍🎓 학생 등록</h2>
+        <div class="mb-4">
+            <label for="book-student-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
+            <input type="text" id="book-student-name" class="w-full p-2 border border-gray-300 rounded-md form-input" placeholder="이름을 입력하세요">
+        </div>
+        <button id="book-student-register-btn" class="w-full py-2 rounded-md btn btn-primary mb-4">등록하고 코드 받기</button>
+        <button id="book-back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
     </div>
 
     <div id="book-content" class="hidden">
@@ -130,8 +143,8 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, increment, collection, addDoc, getDocs, query, where } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, increment, collection, addDoc, getDocs, query, where, runTransaction } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref as storageRef, uploadString, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
 
         // 전역 변수
@@ -904,6 +917,68 @@
         teacherLoginTab.addEventListener('click', () => switchLoginTab('teacher'));
         switchLoginTab('student');
 
+        const registerView = document.getElementById('book-student-register-view');
+        const showRegisterBtn = document.getElementById('book-show-student-register-btn');
+        const backToLoginBtn = document.getElementById('book-back-to-login-btn');
+
+        showRegisterBtn.addEventListener('click', () => {
+            document.getElementById('book-login-view').classList.add('hidden');
+            registerView.classList.remove('hidden');
+        });
+
+        backToLoginBtn.addEventListener('click', () => {
+            registerView.classList.add('hidden');
+            document.getElementById('book-login-view').classList.remove('hidden');
+        });
+
+        document.getElementById('book-student-register-btn').addEventListener('click', async () => {
+            const name = document.getElementById('book-student-name').value.trim();
+            if (!name) { alert('이름을 입력해주세요.'); return; }
+
+            try {
+                const counterRef = doc(db, 'metadata', 'counters');
+                const newCode = await runTransaction(db, async (transaction) => {
+                    const counterDoc = await transaction.get(counterRef);
+                    let nextCode = 1;
+                    if (counterDoc.exists() && counterDoc.data().lastUserCode) {
+                        nextCode = counterDoc.data().lastUserCode + 1;
+                    }
+                    transaction.set(counterRef, { lastUserCode: nextCode }, { merge: true });
+                    return nextCode;
+                });
+
+                const email = `${newCode}@abc.com`;
+                const password = `${newCode}qwerty`;
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+
+                await setDoc(doc(db, 'users', userCredential.user.uid), {
+                    uid: userCredential.user.uid,
+                    name: name,
+                    email: email,
+                    userCode: newCode,
+                    role: 'student',
+                    coins: 0,
+                    balance: 0,
+                    portfolio: {},
+                    createdAt: serverTimestamp()
+                });
+
+                await addDoc(collection(db, 'signupLog'), {
+                    name: name,
+                    userCode: newCode,
+                    role: 'student',
+                    signedUpAt: serverTimestamp()
+                });
+
+                alert(`환영합니다, ${name} 학생! 고유 코드는 ${newCode} 입니다.`);
+                registerView.classList.add('hidden');
+                document.getElementById('book-login-view').classList.remove('hidden');
+            } catch (e) {
+                console.error('Error adding document: ', e);
+                alert('학생 등록 중 문제가 발생했습니다.');
+            }
+        });
+
         const addBookModal = document.getElementById('add-book-modal');
         const cancelAddBookBtn = document.getElementById('cancel-add-book');
         const confirmAddBookBtn = document.getElementById('confirm-add-book');
@@ -989,6 +1064,7 @@
             const listSection = document.getElementById('book-list-section');
             if (user) {
                 loginView.classList.add('hidden');
+                registerView.classList.add('hidden');
                 contentView.classList.remove('hidden');
                 viewerPage.classList.add('hidden');
                 listSection.classList.remove('hidden');
@@ -997,6 +1073,7 @@
                 await loadUserBooks();
             } else {
                 loginView.classList.remove('hidden');
+                registerView.classList.add('hidden');
                 contentView.classList.add('hidden');
             }
         });
