--- a/public/book.html
+++ b/public/book.html
@@ -91,6 +91,7 @@
             <button id="token-give-btn" class="bg-purple-500 text-white px-2 py-1 rounded text-sm hidden">토큰 지급</button>
             <button id="my-class-btn" class="bg-amber-500 text-white px-2 py-1 rounded text-sm hidden">내 학급</button>
             <span class="text-sm text-gray-700">내 지갑: <span id="display-user-tokens">0</span>토큰</span>
+            <button id="my-info-btn" class="text-sm text-gray-500 underline">내 정보</button>
             <button id="book-logout-btn" class="text-sm text-gray-500 underline">로그아웃</button>
         </div>
     </div>
@@ -190,6 +191,23 @@
             <input type="number" id="token-amount" class="w-full p-2 border rounded mb-4" placeholder="지급할 토큰 양" />
             <div class="text-right">
                 <button id="token-distribute-confirm" class="px-3 py-1 rounded bg-purple-500 text-white">지급하기</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 내 정보 팝업 -->
+    <div id="my-info-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-80">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-lg font-semibold">내 정보</h2>
+                <button id="close-my-info-modal" class="text-xl">&times;</button>
+            </div>
+            <div class="mb-4">
+                <label for="my-info-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
+                <input type="text" id="my-info-name" class="w-full p-2 border rounded" />
+            </div>
+            <div class="text-right">
+                <button id="my-info-save-btn" class="px-3 py-1 rounded bg-blue-500 text-white">변경</button>
             </div>
         </div>
     </div>
@@ -1090,6 +1108,11 @@
         const confirmAddBookBtn = document.getElementById('confirm-add-book');
         const newBookTitleInput = document.getElementById('new-book-title');
         const bookLogoutBtn = document.getElementById('book-logout-btn');
+        const myInfoBtn = document.getElementById('my-info-btn');
+        const myInfoModal = document.getElementById('my-info-modal');
+        const myInfoNameInput = document.getElementById('my-info-name');
+        const myInfoSaveBtn = document.getElementById('my-info-save-btn');
+        const closeMyInfoModalBtn = document.getElementById('close-my-info-modal');
         const myBooksTab = document.getElementById('my-books-tab');
         const libraryTab = document.getElementById('library-tab');
         const myBookListEl = document.getElementById('my-book-list');
@@ -1116,6 +1139,27 @@
                 await signOut(auth);
             } catch (error) {
                 console.error('Error signing out:', error);
+            }
+        });
+
+        myInfoBtn.addEventListener('click', () => {
+            if (!bookAuthorUid) return;
+            myInfoNameInput.value = window.authorName || '';
+            myInfoModal.classList.remove('hidden');
+            myInfoNameInput.focus();
+        });
+        closeMyInfoModalBtn.addEventListener('click', () => myInfoModal.classList.add('hidden'));
+        myInfoSaveBtn.addEventListener('click', async () => {
+            const newName = myInfoNameInput.value.trim();
+            if (!newName) { showNotification('이름을 입력하세요'); return; }
+            try {
+                await updateDoc(doc(db, 'users', bookAuthorUid), { name: newName });
+                showNotification('이름이 변경되었습니다.');
+                myInfoModal.classList.add('hidden');
+                await updateUserInfo();
+            } catch (err) {
+                console.error('Error updating name:', err);
+                showNotification('이름 변경 실패: ' + err.message);
             }
         });
 
